--- a/whispurraudio/WhisTwitch (MixItUp)/00_style.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/00_style.html
@@ -89,7 +89,7 @@
     }
 
     .parent {
-        grid-template-columns: 210px 400px 792px 24px 24px 350px;
+        grid-template-columns: 210px 324px 868px 24px 24px 350px;
         grid-template-rows: 202px 432px 112px 24px 214px;
         grid-row-gap: 24px;
         width: 1920px;
@@ -117,6 +117,7 @@
     .gridAreaFooter {
         grid-area: 5/3 / span 1 / span 1;
         margin-top: 12px;
+        margin-right: 112px;
     }
 
     .gridAreaGameName {
