Added dedicated style.css, modified css

--- a/whispurraudio/WhisTwitch (MixItUp)/00_style.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/00_style.html
@@ -1,6 +1,18 @@
 <style>
     @import url(https://use.typekit.net/stb6olv.css);
 
+    .hidden1 {
+        display: none;
+    }
+
+    .hidden0 {
+        display: initial;
+    }
+
+    .center-text {
+        text-align: center;
+    }
+
     #nowPlaying,
     .footerTitle {
         font-size: 1.5em;
@@ -166,7 +178,7 @@
     }
 
     #nowPlayingName {
-        font-size: 54px;
+        font-size: 1.5em;
         overflow-wrap: break-word;
         max-width: 400px;
     }
