Changed kisses footer text

--- a/whispurraudio/WhisTwitch (MixItUp)/11_FooterText_Kisses.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/11_FooterText_Kisses.html
@@ -54,7 +54,7 @@
             <div class="footerTitleBar">
                 <div class="footerTitle">Kitty Kisses</div>
                 <div class="footerSubtitle">
-                    Redeem kisses for the<br />boys using Whiscoins!
+                    Redeem kisses for the<br />boys using channel points!
                 </div>
             </div>
             <hr />
