Reorganized images and CSS

--- a/whispurraudio/WhisTwitch/11_FooterText_Kisses.html
+++ b/whispurraudio/WhisTwitch/11_FooterText_Kisses.html
@@ -61,7 +61,7 @@
             <div class="footerContent kissesScores">
                 <div class="kissesScoresLabel">
                     <img
-                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/LennyHead.png"
+                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch/img/LennyHead.png"
                         class="kissesScoresLabelImage imageShadow"
                     />
                     <div class="kissesScoresLabelText">lenny</div>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="kissesScoresLabel">
                     <img
-                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/FantaHead.png"
+                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch/img/FantaHead.png"
                         class="kissesScoresLabelImage imageShadow"
                     />
                     <div class="kissesScoresLabelText">fanta</div>
