--- a/whispurraudio/WhisTwitch/obs/obs_Todoist.html
+++ b/whispurraudio/WhisTwitch/obs/obs_Todoist.html
@@ -3,7 +3,7 @@
     <head>
         <link
             rel="stylesheet"
-            href="style.css"
+            href="../css/style.css"
         />
         <style>
             .taskContainer {
@@ -28,13 +28,13 @@
 
             dd {
                 display: list-item;
-                list-style-type: "☐";
+                list-style-type: "-";
                 padding-inline-start: 1ch;
             }
 
             .complete {
                 text-decoration: line-through;
-                list-style-type: "☑";
+                list-style-type: "-";
             }
         </style>
     </head>
