--- a/whispurraudio/WhisTwitch/obs/obs_weather_time_overlay-main/weatherWidget.html
+++ b/whispurraudio/WhisTwitch/obs/obs_weather_time_overlay-main/weatherWidget.html
@@ -104,14 +104,16 @@ https://openweathermap.org/
             }
         </script>
         <!-- <center> -->
-        <div
-            class="weather-box weather-box-temp futura-pt-bold"
-            id="id-temp"
-        ></div>
-        <div
-            class="weather-box"
-            id="id-weather"
-        ></div>
+        <div id="weatherWidget">
+            <div
+                class="weather-box weather-box-temp futura-pt-bold"
+                id="id-temp"
+            ></div>
+            <div
+                class="weather-box"
+                id="id-weather"
+            ></div>
+        </div>
         <!-- </center> -->
         <script>
             var language =
